--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-!DOCTYPE
-    <html>
+<!DOCTYPE html> 
+<html>
   <body>
 <div class="your-parsed-text">
     <h1>Hello World</h1>
@@ -7,4 +7,4 @@
  
  </body>
 
-   </html>
+</html>
