--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html> 
 <html>
+  <head>
+    <meta charset= uft-8>
+  </head>
+  
   <body>
 <div class="your-parsed-text">
     <h1>Hello World</h1>
