--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
   <head>
     <title>Сайт</title>
     <meta charset= uft-8>
   </head>
-  
+
   <body>
 <div class="your-parsed-text">
-    <h1>Hello World</h1>
- </div> 
- 
+    <h1>Привет Диман!</h1>
+ </div>
+
  </body>
 
 </html>
