--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Сайт</title>
     <meta charset= uft-8>
+    <script src="stile.css"></script>
+    <script src="script.js"></script>
   </head>
 
   <body>
@@ -13,4 +15,3 @@
  </body>
 
 </html>
- 
