--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Сайт</title>
     <meta charset= uft-8>
-    <script src="stile.css"></script>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     <script src="script.js"></script>
   </head>
 
