--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset= uft-8>
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <script src="script.js"></script>
+    
+    <style type="text/css">
+      body.{background-color:#243CED;}
+      h1{
+         color:#FF0000;
+        }
+    </style>
+    
   </head>
 
   <body>
