--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="script.js"></script>
     
     <style type="text/css">
-      body.{background-color:#243CED;}
+      body.{background-color:#ff0000;}
       h1{
-         color:#FF0000;
+         color:#243CED;
         }
     </style>
     
