--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset= uft-8>
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <script src="script.js"></script>
+
     <script type="text/javascript" language="JavaScript1.2">
     var message="Привет Диман!"
     var neonbasecolor="#990000"
     var neontextcolor="red"
     var neontextcolor2="#FFFFA8"
+    var neontextcolor3="#000000"
+    var neontextcolor4="#0000CD"
     var flashspeed=100
     var flashingletters=3
     var flashingletters2=1
