--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Сайт</title>
-    <meta charset= uft-8>
+    <meta charset="uft-8">
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <script src="script.js"></script>
 
@@ -50,10 +50,7 @@
        flashing=setInterval("neon()",flashspeed)
     }
     beginneon()
-    </script>
-
-    
-
+    </scriptscript>
   </head>
 
   <body>
