--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <body>
 <div>
-    <h1>Привет Диман!</h1>
+<br/><br/><br/><br/><br/>
+    <h1><a href="file:///C:/Users/Compuxter/Documents/GitHub/Your-parsed-text/index.html">Обновить страницу</a></h1>
  </div>
 
  </body>
