--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 <div>
 <br/><br/><br/><br/><br/>
-    <h1><a href="file:///C:/Users/Compuxter/Documents/GitHub/Your-parsed-text/index.html">Обновить страницу</a></h1>
+    <h1><a href="file:https://github.com/Zeroniks/Your-parsed-text/blob/master/index.html">Обновить страницу</a></h1>
  </div>
 
  </body>
