--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <h1><a href="">Обновить страницу</a></h1>
  </div>
 
+  <form name="test" method="get" action="">
+      <input type="text" size="40" >
+      <input type="submit" value="Отправить">
+        <input type="reset" value="Очистить">
+  </form>
+
  </body>
 
 </html>
