--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1><a href="">Обновить страницу</a></h1>
  </div>
 
-  <form name="test" method="post" action="">//name-имя формы, post=
-      <input type="text" size="40" >
-      <input type="submit" value="Отправить">
+  <form class="btn" name="test" method="post" action="">//name-имя формы, post=
+      <input class="btn" type="text" size="40" >
+      <input class="btn" type="submit" value="Отправить">
         <input type="reset" value="Очистить">
   </form>
 
