--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="uft-8">
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <script src="script.js"></script>
+    <script src="Js.js"></script>
   </head>
 
   <body>
