--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <h1><a href="">Обновить страницу</a></h1>
  </div>
 
-  <form  name="test" method="post" action="">//name-имя формы, post=
-      <input type="text" size="40" >
-      <input id="btn" type="submit" value="Отправить">
-        <input type="reset" value="Очистить">
-  </form>
-
+ <form  name="test" method="post" action="">//name-имя формы, post=
+   <input type="text" size="40" >
+   <input  type="submit" value="Отправить" onclick="console.log('this')">
+</form>
  </body>
 
 </html>
