--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  <form  name="test" method="post" action="">//name-имя формы, post=
    <input type="text" size="40" >
-   <input  type="submit" value="Отправить" onclick="console.log('this')">
+   <input id="send" type="submit" value="Отправить">
 </form>
  </body>
 
