--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  </div>
 
  <form  name="test" method="post" action="">//name-имя формы, post=
-   <input type="text" size="40" >
+   <input type="text" size="40" placeholder="введите сообщение">
    <input id="send" type="submit" value="Отправить">
 </form>
  </body>
