--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <script src="script.js"></script>
     <script src="Js.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <script type="text/javascript">
-    $(document).ready(function()
-    {
-      $('.send').click(function(){
-      console.log(123,$(this));
-    });
-  });
-    </script>
+
 
 <div>
 <br/><br/><br/><br/><br/>
